--- a/.github/workflows/rvck-actions.yml
+++ b/.github/workflows/rvck-actions.yml
@@ -58,7 +58,7 @@ jobs:
     uses: ./.github/workflows/kernel-build.yml
     with:
       commit_url: ${{ needs.parse-request.outputs.commit_url }}
-      upload_dir: "${{ github.repository }}/${{ needs.parse-request.outputs.ISSUE_ID }}"
+      upload_dir: "${{ github.repository }}/${{ needs.parse-request.outputs.SRC_REF && needs.parse-request.outputs.ISSUE_ID || github.event.comment.id || needs.parse-request.outputs.ISSUE_ID }}"
     secrets:
       rync_passphrase: ${{ secrets.RSYNC_PASSPHRASE }}
 
@@ -83,7 +83,6 @@ jobs:
       kernel_src_repo: ${{ needs.parse-request.outputs.REPO }}
       fetch_ref: ${{ needs.parse-request.outputs.FETCH_REF }}
       src_ref: ${{ needs.parse-request.outputs.SRC_REF }}
-      issue_id: ${{ needs.parse-request.outputs.ISSUE_ID }}
   
   collect-result:
     if: ${{ !cancelled() }}
