修复Kernel build succeeded链接如果是指定目录，链接后面没有加/，链接会自动跳转加8010端口的问题

--- a/.github/workflows/kernel-build.yml
+++ b/.github/workflows/kernel-build.yml
@@ -67,7 +67,7 @@ jobs:
         continue-on-error: true
         run: |
           if [ "$kernel_url" != "" ]; then
-            result="Kernel build succeeded: [${upload_dir}]($(dirname ${kernel_url}))"
+            result="Kernel build succeeded: [${upload_dir}]($(dirname ${kernel_url}))/"
           else
             result="Kernel build failed."
           fi
