--- a/.github/workflows/parse-rvck.yml
+++ b/.github/workflows/parse-rvck.yml
@@ -151,7 +151,7 @@ jobs:
                   if "fetch" not in res:
                       raise Exception("params:fetch is required")
                   res["FETCH_REF"] = res.pop("fetch")
-                  res["COMMIT_URL"] = f'{payload["repository"]["html_url"]}/pull/{res["ISSUE_ID"]}'
+                  res["COMMIT_URL"] = f'{payload["repository"]["html_url"]}/commit/{res["FETCH_REF"]}'
               
               write_properties_file(res)
 
