fix: rvck 对于pr.reopened 事件的解析
修复解析脚本错误
rvck任务开始前判断是否解析成功

--- a/.github/workflows/parse-rvck.yml
+++ b/.github/workflows/parse-rvck.yml
@@ -158,7 +158,7 @@ jobs:
 
           def pull_request_target(payload: dict):
               # pr 创建
-              if payload["action"] not in ["opened", "reopend", "synchronize"]:
+              if payload["action"] not in ["opened", "reopened", "synchronize"]:
                   return
               
               print(f"from pr {payload['action']}")
