fix: 修改kernel下载地址域名拼接, 修复 update-status 返回值
job.steps 需要用id 去获取输出，name无法定位输出。导致结果无法追加

--- a/.github/workflows/update-status.yml
+++ b/.github/workflows/update-status.yml
@@ -59,7 +59,7 @@ jobs:
 
           EEE
    
-      - name: append-content
+      - id: append-content
         run: |
           set -x
           case $event_name in
