--- a/.github/workflows/kernel-build.yml
+++ b/.github/workflows/kernel-build.yml
@@ -47,6 +47,9 @@ jobs:
       kernel_result_dir: /srv/guix_result/
 
     steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
       - name: kernel-build
         run: |
           guix-cross-build ${{ inputs.commit_url }}
