--- a/.github/workflows/kernel-build.yml
+++ b/.github/workflows/kernel-build.yml
@@ -33,10 +33,7 @@ jobs:
   kernel-build:
     runs-on:
       group: kernel_build-runner
-    container:
-      image: 'hub.oepkgs.net/oerv-ci/guix-kernel-cross-build:v11'
-      options: --privileged
-      
+            
     outputs:
       kernel_download_url: ${{ steps.publish-kernel.outputs.kernel_download_url }}
       initramfs_download_url: ${{ steps.publish-kernel.outputs.initramfs_download_url }}      
@@ -44,7 +41,7 @@ jobs:
 
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      kernel_result_dir: /srv/guix_result/
+      kernel_result_dir: guix_result
 
     steps:
       - name: Set up QEMU
@@ -52,7 +49,12 @@ jobs:
 
       - name: kernel-build
         run: |
-          guix-cross-build ${{ inputs.commit_url }}
+          rm -rf "${kernel_result_dir}" || true
+          
+          docker run -ti --privileged \
+            -v "${kernel_result_dir}":/srv/guix_result \
+            docker://hub.oepkgs.net/oerv-ci/guix-kernel-cross-build:v11 \
+            guix-cross-build ${{ inputs.commit_url }}
    
       - name: publish kernel
         id: publish-kernel
