--- a/.github/workflows/kernel-build.yml
+++ b/.github/workflows/kernel-build.yml
@@ -44,16 +44,19 @@ jobs:
       kernel_result_dir: guix_result
 
     steps:
+      - name: clean ws
+        run: |
+          sudo rm -rf ./* || true
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
       - name: kernel-build
         run: |
-          rm -rf "${kernel_result_dir}" || true
-          
-          docker run -ti --privileged \
-            -v "${kernel_result_dir}":/srv/guix_result \
-            docker://hub.oepkgs.net/oerv-ci/guix-kernel-cross-build:v11 \
+          mkdir -p "${kernel_result_dir}"
+          docker run --privileged \
+            -v "$(pwd)/${kernel_result_dir}:/srv/guix_result" \
+            hub.oepkgs.net/oerv-ci/guix-kernel-cross-build:v11 \
             guix-cross-build ${{ inputs.commit_url }}
    
       - name: publish kernel
