--- a/.github/workflows/rvck-actions.yml
+++ b/.github/workflows/rvck-actions.yml
@@ -59,7 +59,7 @@ jobs:
     uses: ./.github/workflows/kernel-build.yml
     with:
       commit_url: ${{ needs.parse-request.outputs.COMMIT_URL }}
-      upload_dir: "${{ github.repository }}/${{ needs.parse-request.outputs.SRC_REF && needs.parse-request.outputs.ISSUE_ID || github.event.comment.id || needs.parse-request.outputs.ISSUE_ID }}"
+      upload_dir: ${{ github.repository }}/${{ github.event.comment.id && format('{0}_{1}', needs.parse-request.outputs.ISSUE_ID, github.event.comment.id) || needs.parse-request.outputs.ISSUE_ID }}
     secrets:
       rync_passphrase: ${{ secrets.RSYNC_PASSPHRASE }}
 
